--- a/roles/gvl.image/templates/version_info.j2
+++ b/roles/gvl.image/templates/version_info.j2
@@ -1,3 +1,3 @@
-version: {{ gvl_version }
-flavour: {{ gvl_flavour }
+version: {{ gvl_version }}
+flavour: {{ gvl_flavour }}
 build_date: {{ gvl_build_date }}
