Increased number of gunicorn workers to prevent starvation issue.

--- a/roles/gvl.image/templates/gvldash.j2
+++ b/roles/gvl.image/templates/gvldash.j2
@@ -10,4 +10,4 @@ chdir {{ gvldash_path }}/gvldash
 env DJANGO_CONFIGURATION="Production"
 export DJANGO_CONFIGURATION
 
-exec {{ gvldash_path }}/.venv/bin/gunicorn wsgi:application
+exec {{ gvldash_path }}/.venv/bin/gunicorn -w 2 wsgi:application
