Fixed incorrect variable reference

--- a/roles/gvl.image/templates/nginx.j2
+++ b/roles/gvl.image/templates/nginx.j2
@@ -90,7 +90,7 @@ http {
 
 
         location /static {
-            alias {{ gvldash_path }}/gvldash/static;
+            alias {{ gvl_dash_path }}/gvldash/static;
             expires 24h;
         }
 
