--- a/roles/gvl.image/templates/nginx_gvl_locations.j2
+++ b/roles/gvl.image/templates/nginx_gvl_locations.j2
@@ -1,6 +1,6 @@
         # GVL location overrides
 
-        location / {
+        location ~ ^/ {
         	# this prevents a deadlock when gvldash gunicorn workers make a request to localhost
         	deny 127.0.0.1;
             proxy_pass  http://gvl_app;
@@ -9,7 +9,7 @@
             proxy_set_header   Host  $host;
         }
 
-        location /api {
+        location ~ ^/api {
         	# But the /api should be callable from localhost however
         	allow 127.0.0.1;
             proxy_pass  http://gvl_app;
@@ -18,7 +18,7 @@
             proxy_set_header   Host  $host;
         }
 
-        location /static {
+        location ~ ^/static {
             alias {{ gvl_dash_path }}/gvldash/static;
             expires 24h;
         }
@@ -44,7 +44,7 @@
             expires 24h;
         }
 
-        location /_upload_done {
+        location ~ ^/_upload_done {
             set $dst /galaxy/api/tools;
             if ($args ~ nginx_redir=([^&]+)) {
                 set $dst $1;
