--- a/roles/gvl.image/templates/gvldash.j2
+++ b/roles/gvl.image/templates/gvldash.j2
@@ -10,8 +10,8 @@ chdir {{ gvl_dash_path }}/gvldash
 env DJANGO_CONFIGURATION="Production"
 export DJANGO_CONFIGURATION
 
-#exec {{ gvl_dash_path }}/.venv/bin/gunicorn -w 2 wsgi:application
-script
-  source ../.venv/bin/activate
-  python manage.py runserver 0.0.0.0:8000 > /dev/null 2>&1 &
-end script
+exec {{ gvl_dash_path }}/.venv/bin/gunicorn -w 2 wsgi:application
+#script
+#  . ../.venv/bin/activate
+#  python manage.py runserver 0.0.0.0:8000 > /dev/null 2>&1 &
+#end script
