--- a/roles/gvl.filesystem/templates/version_info.j2
+++ b/roles/gvl.filesystem/templates/version_info.j2
@@ -1,4 +1,4 @@
 name: {{ gvl_fs_name }}
-version: {{ gvl_fs_version }}
+version: "{{ gvl_fs_version }}"
 flavour: {{ gvl_fs_flavour }}
 build_date: {{ gvl_fs_build_date }}
