Fixed nginx configuration

--- a/roles/gvl.image/templates/nginx.j2
+++ b/roles/gvl.image/templates/nginx.j2
@@ -133,11 +133,12 @@ http {
         }
 
         # VNC & noVNC settings
-        location ~ /vnc(/?)(.*) {
+        location ~ /vnc {
             auth_pam    "Secure Zone";
             auth_pam_service_name   "nginx";
             rewrite ^/vnc$ /vnc/ permanent; # redirect if no trailing slash
-            proxy_pass http://vnc_app/$2;
+            rewrite ^/vnc/(.*) /$1 break;
+            proxy_pass http://vnc_app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
